[gd_scene load_steps=4 format=3 uid="uid://c50r70w7rtemi"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_jwibh"]
[ext_resource type="Texture2D" uid="uid://cvykxu6ljxnw8" path="res://assets/sprites/menu_background.png" id="2_agvgu"]
[ext_resource type="Theme" uid="uid://btcbtgf4bsm2d" path="res://scenes/text.tres" id="7_ur103"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -162.0
offset_right = 288.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwibh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("2_agvgu")

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MenuButtons" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainMenu/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("7_ur103")
theme_override_font_sizes/font_size = 16
text = "Hawk Tuah Collection"

[node name="PlayButton" type="Button" parent="MainMenu/MenuButtons"]
layout_mode = 2
theme = ExtResource("7_ur103")
text = "Game Select"

[node name="ExitButton" type="Button" parent="MainMenu/MenuButtons"]
layout_mode = 2
theme = ExtResource("7_ur103")
text = "Exit"

[node name="GameSelect" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 571.0
offset_bottom = 319.0

[node name="MiddleMargin" type="MarginContainer" parent="GameSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 25

[node name="Games" type="HBoxContainer" parent="GameSelect/MiddleMargin"]
layout_mode = 2
size_flags_vertical = 0

[node name="HawkyTuah" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_ur103")
text = "Hawky Tuah"

[node name="HawkyTuahHyper" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_ur103")
disabled = true
text = "Hawky Tuah
(Hyper Mode)"

[node name="Hawksweeper" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_ur103")
disabled = true
text = "Hawksweeper"

[node name="TwentyFortyTuah" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_ur103")
disabled = true
text = "Twenty Forty
Tuah"

[node name="ReturnButton" type="Button" parent="GameSelect/MiddleMargin/Games"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("7_ur103")
text = "Back to
Menu"

[node name="GameInfo" type="Label" parent="GameSelect"]
offset_top = 291.0
offset_right = 340.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("7_ur103")
text = "This is some sample text. This is some sample text."

[connection signal="pressed" from="MainMenu/MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="GameSelect/MiddleMargin/Games/HawkyTuah" to="." method="_on_hawky_tuah_pressed"]
[connection signal="pressed" from="GameSelect/MiddleMargin/Games/ReturnButton" to="." method="_on_return_button_pressed"]
